--- a/src/components/filter/style.css
+++ b/src/components/filter/style.css
@@ -1,5 +1,9 @@
 /* filters */
 
+.filters {
+    padding-bottom: 50px;
+}
+
 .filters__wrapper {
     max-width: 1230px;
     margin: 0 auto;
@@ -27,7 +31,7 @@
     border: 1px solid #b7b7b7;
     border-radius: 5px;
     position: relative;
-    width: 200px;
+    width: 220px;
 }
 
 .filters__search-input {
