--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Manrope:wght@400;500;700&display=swap");
+
 :root {
     --brand-color: #0051a2;
 }
@@ -30,4 +32,143 @@ body {
 .border {
     border: 1px solid red;
 
+}
+
+.home-content__title {
+    max-width: 1230px;
+    margin: 0 auto;
+    padding: auto;
+    padding: 0 9px;
+    font-size: 2em;
+    font-weight: 700;
+    text-align: left;
+}
+
+.events {
+    padding: 30px 0 30px
+}
+
+
+.events__container {
+    max-width: 1230px;
+    margin: 0 auto;
+    display: flex;
+    row-gap: 10px;
+    column-gap: 10px;
+    flex-wrap: wrap;
+
+}
+
+.event-card {
+    display: flex;
+    flex-direction: column;
+    width: 24%;
+    overflow: hidden;
+    min-width: 300px;
+    border-radius: 5px;
+    box-shadow: 0 0 5px 1px rgba(0, 0, 0, .1);
+    height: 337px;
+    justify-content: space-between;
+}
+
+.event-card__header {
+    width: 100%;
+    display: block;
+    position: relative;
+}
+
+
+.event-card__category-box {
+    position: absolute;
+    bottom: 10px;
+    left: 5px;
+    background-color: #0051a2;
+    border-radius: 7px;
+}
+
+.event-card__category-title {
+    margin: 0;
+    padding: 6px 10px;
+    font-size: 12px;
+    color: #fff;
+
+}
+
+.event-card__img {
+    width: 100%;
+    height: 157px;
+    object-fit: cover;
+}
+
+.event-card__img--last {
+    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%);
+}
+
+.event-card__date,
+.event-card__title,
+.event-card__registration {
+    display: block;
+}
+
+.event-card__date {
+    padding: 10px 0;
+    font-size: 12px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+}
+
+.event-card__title {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+    overflow: hidden;
+    max-height: 77px;
+    font-size: 17px;
+    font-weight: 500;
+    line-height: 24px;
+    color: #000;
+}
+
+.event-card__body {
+    padding: 10px 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+}
+
+.event-card__registration {
+    margin-top: auto;
+    margin-bottom: 5px;
+    padding: 15px 20px 0;
+    font-size: 14px;
+    border-top: 1px solid rgba(0, 0, 0, .06667);
+}
+
+.event-card__registration--opened,
+.event-card__registration--close {
+    position: relative;
+}
+
+.event-card__registration--opened::after {
+    content: "";
+    position: absolute;
+    top: 19px;
+    left: 0;
+    height: 10px;
+    width: 10px;
+    border-radius: 50%;
+    background-color: #58e590;
+}
+
+.event-card__registration--close::after {
+    content: "";
+    position: absolute;
+    top: 19px;
+    left: 0;
+    height: 10px;
+    width: 10px;
+    border-radius: 50%;
+    background-color: #fc3e1e;
 }
