--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -42,133 +42,62 @@ body {
     font-size: 2em;
     font-weight: 700;
     text-align: left;
+    color: var(--brand-color)
 }
 
 .events {
-    padding: 30px 0 30px
+    padding: 30px 0 50px
 }
 
 
 .events__container {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     max-width: 1230px;
     margin: 0 auto;
-    display: flex;
-    row-gap: 10px;
-    column-gap: 10px;
-    flex-wrap: wrap;
+    padding: 0;
+    row-gap: 20px;
+    column-gap: 20px;
 
 }
 
-.event-card {
-    display: flex;
-    flex-direction: column;
-    width: 24%;
-    overflow: hidden;
-    min-width: 300px;
-    border-radius: 5px;
-    box-shadow: 0 0 5px 1px rgba(0, 0, 0, .1);
-    height: 337px;
-    justify-content: space-between;
-}
-
-.event-card__header {
+.event {
+    background: url('../img/event_bg.jpg') no-repeat;
     width: 100%;
-    display: block;
-    position: relative;
-}
-
-
-.event-card__category-box {
-    position: absolute;
-    bottom: 10px;
-    left: 5px;
-    background-color: #0051a2;
-    border-radius: 7px;
-}
-
-.event-card__category-title {
-    margin: 0;
-    padding: 6px 10px;
-    font-size: 12px;
-    color: #fff;
-
-}
-
-.event-card__img {
-    width: 100%;
-    height: 157px;
+    min-height: 520px;
     object-fit: cover;
 }
 
-.event-card__img--last {
-    -webkit-filter: grayscale(100%);
-    filter: grayscale(100%);
-}
-
-.event-card__date,
-.event-card__title,
-.event-card__registration {
-    display: block;
-}
-
-.event-card__date {
-    padding: 10px 0;
-    font-size: 12px;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-}
-
-.event-card__title {
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 3;
-    overflow: hidden;
-    max-height: 77px;
-    font-size: 17px;
-    font-weight: 500;
-    line-height: 24px;
-    color: #000;
-}
-
-.event-card__body {
-    padding: 10px 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 100%;
-}
-
-.event-card__registration {
-    margin-top: auto;
-    margin-bottom: 5px;
-    padding: 15px 20px 0;
-    font-size: 14px;
-    border-top: 1px solid rgba(0, 0, 0, .06667);
-}
-
-.event-card__registration--opened,
-.event-card__registration--close {
+.event__block-info {
     position: relative;
 }
 
-.event-card__registration--opened::after {
-    content: "";
-    position: absolute;
-    top: 19px;
-    left: 0;
-    height: 10px;
-    width: 10px;
-    border-radius: 50%;
-    background-color: #58e590;
+.event__img {}
+
+
+
+
+@media (max-width:1197px) {
+
+    .home-content__title {
+        max-width: 912px;
+        text-align: center;
+    }
+
 }
 
-.event-card__registration--close::after {
-    content: "";
-    position: absolute;
-    top: 19px;
-    left: 0;
-    height: 10px;
-    width: 10px;
-    border-radius: 50%;
-    background-color: #fc3e1e;
+@media (max-width:820px) {
+    .event-card {
+        display: flex;
+        flex-direction: column;
+        width: 44%;
+        overflow: hidden;
+        /* max-width: 280px; */
+        border-radius: 5px;
+        box-shadow: 0 0 5px 1px rgba(0, 0, 0, .1);
+        height: 337px;
+        justify-content: space-between;
+    }
 }
