--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,103 +1,126 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Manrope:wght@400;500;700&display=swap");
 
 :root {
-    --brand-color: #0051a2;
+  --brand-color: #0051a2;
 }
 
 html,
 body {
-    min-height: 100vh;
-    font-family: "Manrope";
-    font-weight: normal;
-    color: #484343;
-    background-color: #f6f5f3;
+  min-height: 100vh;
+  font-family: "Manrope";
+  font-weight: normal;
+  color: #484343;
+  background-color: #f6f5f3;
 }
 
 #root {
-    min-height: 100vh;
+  min-height: 100vh;
 }
 
 .App {
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .container {
-    max-width: 1360px;
-    margin: 0 auto;
-    padding: 0 30px;
+  max-width: 1360px;
+  margin: 0 auto;
+  padding: 0 30px;
 }
 
 .border {
-    border: 1px solid red;
-
+  border: 1px solid red;
 }
 
 .home-content__title {
-    max-width: 1230px;
-    margin: 0 auto;
-    padding: auto;
-    padding: 0 9px;
-    font-size: 2em;
-    font-weight: 700;
-    text-align: left;
-    color: var(--brand-color)
+  max-width: 1230px;
+  margin: 0 auto;
+  padding: 0 9px;
+  font-size: 2em;
+  font-weight: 700;
+  text-align: left;
+  color: var(--brand-color);
+}
+
+.event-content__title {
+  font-size: 2em;
 }
 
 .events {
-    padding: 30px 0 50px
+  padding: 30px 0 50px;
 }
-
 
 .events__container {
-    position: relative;
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  max-width: 1230px;
+  margin: 0 auto;
+  padding: 0;
+  row-gap: 20px;
+  column-gap: 20px;
+}
+
+.event__header {
+  background: url("../img/event_bg.jpg") no-repeat center center fixed;
+  background-size: cover;
+  width: 100%;
+  min-height: 520px;
+  position: relative;
+  align-items: flex-end;
+}
+
+.event__short-info {
+  position: absolute;
+  bottom: 30px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+}
+
+.event__register {
+  background-color: #ffdf38;
+  /* text-transform: uppercase; */
+  padding: 15px 20px;
+  font-size: 26px;
+  border-radius: 5px;
+  font-weight: 500;
+}
+
+.event__date,
+.event__members {
+  color: white;
+}
+
+.event__date {
+  font-size: 18px;
+}
+
+.event__status {
+  color: green;
+  background-color: #fff;
+  padding: 5px 10px;
+}
+
+@media (max-width: 1197px) {
+  .home-content__title {
+    max-width: 912px;
+    text-align: center;
+  }
+}
+
+@media (max-width: 820px) {
+  .event-card {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    max-width: 1230px;
-    margin: 0 auto;
-    padding: 0;
-    row-gap: 20px;
-    column-gap: 20px;
-
-}
-
-.event {
-    background: url('../img/event_bg.jpg') no-repeat;
-    width: 100%;
-    min-height: 520px;
-    object-fit: cover;
-}
-
-.event__block-info {
-    position: relative;
-}
-
-.event__img {}
-
-
-
-
-@media (max-width:1197px) {
-
-    .home-content__title {
-        max-width: 912px;
-        text-align: center;
-    }
-
-}
-
-@media (max-width:820px) {
-    .event-card {
-        display: flex;
-        flex-direction: column;
-        width: 44%;
-        overflow: hidden;
-        /* max-width: 280px; */
-        border-radius: 5px;
-        box-shadow: 0 0 5px 1px rgba(0, 0, 0, .1);
-        height: 337px;
-        justify-content: space-between;
-    }
+    flex-direction: column;
+    width: 44%;
+    overflow: hidden;
+    /* max-width: 280px; */
+    border-radius: 5px;
+    box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.1);
+    height: 337px;
+    justify-content: space-between;
+  }
 }
