--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -44,7 +44,7 @@ body {
 }
 
 .event-content__title {
-  font-size: 2em;
+  font-size: 60px
 }
 
 .events {
@@ -61,6 +61,11 @@ body {
   padding: 0;
   row-gap: 20px;
   column-gap: 20px;
+}
+
+.event {
+  background-color: #fff;
+  padding-bottom: 70px;
 }
 
 .event__header {
@@ -87,6 +92,12 @@ body {
   font-size: 26px;
   border-radius: 5px;
   font-weight: 500;
+  cursor: pointer;
+}
+
+.event__register:hover {
+  box-shadow: 1px 1px 1px 1px rgba(255, 255, 86, .3);
+  cursor: pointer;
 }
 
 .event__date,
@@ -98,10 +109,85 @@ body {
   font-size: 18px;
 }
 
-.event__status {
-  color: green;
-  background-color: #fff;
-  padding: 5px 10px;
+.speaker__item {
+  display: flex;
+  column-gap: 20px;
+}
+
+.event__description {
+  font-size: 20px;
+  line-height: 28px;
+}
+
+.speaker__img-container {
+  border-radius: 50%;
+  overflow: hidden;
+  max-width: 150px;
+  max-height: 150px;
+}
+
+.speaker__speaker__avatar {
+  width: 100%;
+}
+
+.speaker__text {
+  max-width: 30%;
+}
+
+.speaker__name {
+  font-size: 20px;
+  font-weight: 700;
+  padding-bottom: 10px;
+}
+
+.speaker__position {
+  font-size: 18px;
+  padding-top: 10px;
+
+}
+
+.speaker__company {
+  font-size: 18px;
+}
+
+.full-info__list {
+  display: flex;
+  row-gap: 15px;
+  column-gap: 30px;
+
+}
+
+.full-info__item {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  flex-wrap: wrap;
+  row-gap: 30px;
+
+  align-items: center;
+  justify-content: center;
+  width: 23%;
+
+  text-align: center;
+}
+
+.full-info__img-container {
+  max-width: 80px;
+}
+
+.full-info__img {
+  width: 100%;
+}
+
+.full-info__description {
+  display: flex;
+  flex-direction: column;
+  row-gap: 7px;
+}
+
+.full-info__body {
+  font-weight: 500;
+  font-size: 18px;
 }
 
 @media (max-width: 1197px) {
