--- a/src/components/event/style.css
+++ b/src/components/event/style.css
@@ -1,128 +1,130 @@
-.event-card {
-    display: flex;
-    flex-direction: column;
-    width: 23%;
-    overflow: hidden;
-    min-width: 288px;
-    border-radius: 5px;
-    box-shadow: 0 0 5px 1px rgba(0, 0, 0, .1);
-    height: 337px;
-    justify-content: space-around;
-}
-
-.event-card__header {
-    width: 100%;
-    display: block;
-    position: relative;
-}
-
-
-.event-card__category-box {
-    position: absolute;
-    bottom: 10px;
-    left: 5px;
-    background-color: #0051a2;
-    border-radius: 7px;
-}
-
-.event-card__category-title {
-    margin: 0;
-    padding: 6px 10px;
-    font-size: 12px;
-    color: #fff;
-
-}
-
-.event-card__img {
-    width: 100%;
-    height: 157px;
-    object-fit: cover;
-}
-
-.event-card__img--last {
-    -webkit-filter: grayscale(100%);
-    filter: grayscale(100%);
-}
-
-.event-card__date,
-.event-card__title,
-.event-card__registration {
-    display: block;
-}
-
-.event-card__date {
-    padding: 10px 0;
-    font-size: 12px;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-}
-
-.event-card__title {
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 3;
-    overflow: hidden;
-    max-height: 77px;
-    font-size: 17px;
-    font-weight: 700;
-    line-height: 24px;
-    color: #000;
-}
-
-.event-card__body {
-    padding: 10px 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 100%;
+.event {
     background-color: #fff;
+    padding-bottom: 70px;
 }
 
-.event-card__registration {
-    margin-top: auto;
-    margin-bottom: 5px;
-    padding: 15px 20px 0;
-    font-size: 14px;
-    border-top: 1px solid rgba(0, 0, 0, .06667);
+.event-content__title {
+    font-size: 60px
 }
 
-.event-card__registration--opened,
-.event-card__registration--close {
+.event__header {
+    background: url("../../img/event_bg.jpg") no-repeat center center fixed;
+    background-size: cover;
+    width: 100%;
+    min-height: 520px;
     position: relative;
+    align-items: flex-end;
 }
 
-.event-card__registration--opened::after {
-    content: "";
+.event__short-info {
     position: absolute;
-    top: 19px;
-    left: 0;
-    height: 10px;
-    width: 10px;
-    border-radius: 50%;
-    background-color: #58e590;
+    bottom: 30px;
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
 }
 
-.event-card__registration--close::after {
-    content: "";
-    position: absolute;
-    top: 19px;
-    left: 0;
-    height: 10px;
-    width: 10px;
-    border-radius: 50%;
-    background-color: #fc3e1e;
+.event__register {
+    background-color: #ffdf38;
+    /* text-transform: uppercase; */
+    padding: 15px 20px;
+    font-size: 26px;
+    border-radius: 5px;
+    font-weight: 500;
+    cursor: pointer;
 }
 
-@media (max-width:820px) {
-    .event-card {
-        display: flex;
-        flex-direction: column;
-        width: 44%;
-        overflow: hidden;
-        /* max-width: 280px; */
-        border-radius: 5px;
-        box-shadow: 0 0 5px 1px rgba(0, 0, 0, .1);
-        height: 337px;
-        justify-content: space-between;
-    }
+.event__register:hover {
+    box-shadow: 1px 1px 1px 1px rgba(255, 255, 86, .3);
+    cursor: pointer;
+}
+
+.event__date,
+.event__members {
+    color: white;
+}
+
+.event__date {
+    font-size: 18px;
+}
+
+.speaker__item {
+    display: flex;
+    column-gap: 20px;
+}
+
+.event__description {
+    font-size: 20px;
+    line-height: 28px;
+}
+
+.speaker__img-container {
+    border-radius: 50%;
+    overflow: hidden;
+    max-width: 150px;
+    max-height: 150px;
+}
+
+.speaker__speaker__avatar {
+    width: 100%;
+}
+
+.speaker__text {
+    max-width: 30%;
+}
+
+.speaker__name {
+    font-size: 20px;
+    font-weight: 700;
+    padding-bottom: 10px;
+}
+
+.speaker__position {
+    font-size: 18px;
+    padding-top: 10px;
+
+}
+
+.speaker__company {
+    font-size: 18px;
+}
+
+.full-info__list {
+    display: flex;
+    row-gap: 15px;
+    column-gap: 30px;
+
+}
+
+.full-info__item {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    flex-wrap: wrap;
+    row-gap: 30px;
+
+    align-items: center;
+    justify-content: center;
+    width: 23%;
+
+    text-align: center;
+}
+
+.full-info__img-container {
+    max-width: 80px;
+}
+
+.full-info__img {
+    width: 100%;
+}
+
+.full-info__description {
+    display: flex;
+    flex-direction: column;
+    row-gap: 7px;
+}
+
+.full-info__body {
+    font-weight: 500;
+    font-size: 18px;
 }
