--- a/src/components/registration/styles.css
+++ b/src/components/registration/styles.css
@@ -10,3 +10,83 @@
     text-align: center;
     margin-bottom: 40px;
 }
+
+.register {
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
+    width: 300px;
+    margin-bottom: 70px;
+
+}
+
+
+
+.register__block {
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
+
+}
+
+.register__input {
+    border: 1px solid #ced4da;
+    padding: 0.375rem 0.75rem;
+    /* padding: 7px 14px; */
+    display: block;
+    max-width: 100%;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: var(--darkgrey);
+    background-color: #fff;
+    background-clip: padding-box;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    border-radius: 0.25rem
+}
+
+.register__required {
+    color: tomato;
+}
+
+.btn {
+    background-color: #ffdf38;
+    color: #252525;
+    padding: 15px 20px;
+    border-radius: 5px;
+    font-weight: 500;
+    cursor: pointer;
+}
+
+.register__btn {
+    font-size: 18px;
+}
+
+.register__select {
+    width: 100%;
+    border-radius: 5px;
+    border: 1px solid #ced4da;
+    padding: 8px 9px;
+    background-color: #fff;
+}
+
+
+/* Message*/
+
+.message {
+    display: flex;
+    flex-direction: column;
+}
+
+.message__title {
+    font-size: 26px;
+    font-weight: 700;
+    text-align: center;
+}
+
+.message__text {
+    text-align: center;
+    font-weight: 500;
+}
