--- a/src/components/filter/style.css
+++ b/src/components/filter/style.css
@@ -15,6 +15,7 @@
     column-gap: 20px;
     row-gap: 15px;
     align-items: center;
+    justify-content: end;
 }
 
 .filters-category__list {
@@ -32,6 +33,7 @@
     border-radius: 5px;
     position: relative;
     width: 220px;
+    order: 2;
 }
 
 .filters__search-input {
@@ -80,6 +82,16 @@
 
 .filters__list {
     column-gap: 20px;
+}
+
+.filters__select {
+    border: 1px solid #b7b7b7;
+    padding: 4px 5px;
+    position: relative;
+    background-color: #fff;
+    border-radius: 5px;
+    width: 220px;
+    order: 1;
 }
 
 @media (max-width:750px) {
