--- a/src/components/registration/styles.css
+++ b/src/components/registration/styles.css
@@ -5,10 +5,18 @@
 }
 
 .registration_content__title {
+    display: flex;
+    flex-direction: column;
+
     font-size: 38px;
     padding: 15px;
     text-align: center;
     margin-bottom: 40px;
+}
+
+.registration__form {
+    display: flex;
+    margin: 0 auto;
 }
 
 .register {
