--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -92,6 +92,11 @@ body {
   color: var(--brand-color);
 }
 
+.btn--admin {
+  padding: 5px 7px;
+  color: #484343;
+}
+
 
 
 @media (max-width: 1197px) {
