--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -25,6 +25,11 @@ a:visited {
     text-decoration: none;
 }
 
+.heading-reset {
+    margin: 0;
+    padding: 0;
+}
+
 a:hover {
     color: inherit;
     text-decoration: none;
