--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -102,6 +102,15 @@ body {
   color: var(--brand-color);
 }
 
+.btn {
+  background-color: #ffdf38;
+  color: #252525;
+  padding: 15px 20px;
+  border-radius: 5px;
+  font-weight: 500;
+  cursor: pointer;
+}
+
 .btn--admin-add {
   padding: 5px 7px;
   color: #484343;
@@ -112,6 +121,12 @@ body {
   color: #fff;
   background: tomato;
 }
+
+.btn--del {
+  background-color: tomato;
+  color: #fff;
+}
+
 
 
 
