--- a/src/styles/admin.css
+++ b/src/styles/admin.css
@@ -292,6 +292,7 @@ table {
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-bottom: 10px;
 }
 
 .admin_event__submit {
