--- a/src/styles/admin.css
+++ b/src/styles/admin.css
@@ -221,9 +221,9 @@ table {
     border-radius: 10px;
 }
 
-.tox-statusbar {
+/* .tox-statusbar {
     display: none !important;
-}
+} */
 
 
 .admin_event__form {
