--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -55,11 +55,9 @@ input[type="submit"]:focus {
   outline: 1px solid var(--brand-color);
 }
 
-
 input[type="submit"] {
   border: none;
 }
-
 
 .title-2 {
   font-size: 48px;
@@ -90,14 +88,12 @@ input[type="submit"] {
 }
 
 .home-content__title {
-
   padding: 0 9px;
   font-size: 2em;
   font-weight: 700;
   text-align: left;
   color: var(--brand-color);
 }
-
 
 .events {
   padding: 30px 0 50px;
@@ -174,8 +170,10 @@ input[type="submit"] {
   padding: 7px 13px;
 }
 
-
-
+.moreList {
+  font-weight: bold;
+  text-decoration: underline;
+}
 
 @media (max-width: 1197px) {
   .home-content__title {
