--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -175,6 +175,33 @@ input[type="submit"] {
   text-decoration: underline;
 }
 
+.search_input_field {
+  border-radius: 3px;
+  width: 100%;
+  padding: 18px;
+  border: 1px solid #484343;
+}
+.search_container {
+  margin-bottom: 40px;
+}
+
+.search_input {
+  display: flex;
+  height: 100%;
+  margin: 50px 0;
+}
+
+.search_result_list {
+  display: flex;
+  column-gap: 30px;
+  row-gap: 15px;
+  flex-direction: column;
+}
+.search_result_item {
+  padding: 3px 5px;
+  border-radius: 3px;
+}
+
 @media (max-width: 1197px) {
   .home-content__title {
     max-width: 912px;
